Bug fix for window sizing on Firefox (#66)
* Fix width

* Remove unnecessary dep

* Update Angular

* Improve animations

* Update manifest version

--- a/projects/popup/src/styles.scss
+++ b/projects/popup/src/styles.scss
@@ -5,5 +5,5 @@
 
 body {
   /* Max width allowed by any chrome extension */
-  width: 600px;
+  min-width: 600px;
 }
